tests/NormalTests/paczka1/fuzzy1/13168068.err
Error in line 22: f2eaubp4QS A305 31,4
Error in line 28: f2eaubp4QS A603 79,8
Error in line 31: WLxvhOv A126 24,4
